# manim

./: .env.example  .gitignore  .pre-commit-config.yaml  GETTING_STARTED.md  INTEGRATION_COMPLETE.md  MERGE_SUMMARY.md  PROJECT_SUMMARY.md  README.md  corpus_raw.jsonl  corpus_raw_full500.jsonl  demo.py  json_to_syllabus.py  main.py  pnpm-lock.yaml  pyproject.toml  requirements.txt
TextExtraction/: extraction.py  requirements.txt
config/: config.yaml  env.example
coordination/: blockers.md  overnight_summary.md  quality_dashboard.md  sprint_dashboard.md  week_0_kickoff.md  week_1_kickoff.md
docs/: API.md  OLD_README.md  QUICKSTART.md  SETUP.md  USAGE.md  architecture.md  contracts.md  decisions.md  runbook.md
examples/: demo.ipynb  example_input.json  json_template.md
scripts/: cleanup.py  dev-setup.sh  e2e_test.py  index_corpus.py  render_fixtures.py  run_smoke.py  seed_prompts.py
src/: __init__.py  pipeline.py
supabase/: config.toml  seed.sql
workers/: app.py  pipeline.py  pyproject.toml
workers/corpus/: indexer.py  manim_gl_to_ce.py  retriever.py
workers/lib/: ast_safety.py  byok.py  config.py  errors.py  llm.py  obs.py  sandbox.py  schemas.py  supabase_client.py
workers/prompts/: codegen_repair_v1.md  codegen_repair_v2.md  codegen_v1.md  codegen_v2.md  curriculum_v1.md  curriculum_v2.md  scene_spec_v1.md  scene_spec_v2.md  script_v1.md  script_v2.md  style_guide.md
workers/stages/: audio.py  codegen.py  compose.py  curriculum.py  ingest.py  render.py  scene_spec.py  script.py
workers/tests/: test_audio_stub.py  test_pipeline_state.py
(+60 files in other folders)
