[project]
name = "manim-workers"
version = "0.1.0"
description = "Modal workers for the manim pipeline"
requires-python = ">=3.12"
dependencies = [
  "modal>=0.64.0",
  "pydantic>=2.7.0",
  "supabase>=2.7.0",
  "openai>=1.40.0",
  "anthropic>=0.34.0",
  "voyageai>=0.2.0",
  "tenacity>=8.2.0",
  "structlog>=24.1.0",
  "python-dotenv>=1.0.0",
  # Pipeline stage deps
  "pdfplumber>=0.11.0",
  "manim>=0.18.0",
  "numpy>=1.26.0",
  "Pillow>=10.0.0",
  # Stage 0 (Nougat) deps deferred to Modal image to avoid local heavy installs
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pyright>=1.1.380",
  "ruff>=0.6.0",
]

[tool.uv]
package = false
